--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,3 +1,101 @@
-*{
-    background-color: red;
+@use '../base/functions' as fun;
+@use '../base/variables' as var;
+
+@import '../components/hamburger';
+
+header{
+    width: 100%;
+    position: fixed;
+    left: 0;
+    background-color: fun.color('tertiary');
+    padding: 10px;
+    > div{
+        width: 90%;
+        max-width: var.$limit-width;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    img{
+        width: 45px;
+    }
+    a{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        width: fit-content;
+        p{
+            font-size: 1.5rem;
+            color: fun.color('white');
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+    }
+    nav{
+        ul{
+            display: flex;
+            list-style: none;            
+            gap: 15px;
+            a{
+                color: fun.color('white');
+                font-size: 1.6rem;
+                text-transform: uppercase;
+                font-weight: 500;
+                cursor: pointer;
+                position: relative;
+                &::before{
+                    content: "";
+                    width: 0;
+                    height: 2px;
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    transition: .5s ease width;
+                    background-color: fun.color('white');
+                }
+                &:hover{
+                    &::before{
+                        width: 100%;
+                        right: unset;
+                        left: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media(max-width: fun.breakpoints('ipad-big')){
+    header{
+        > div{
+            a{
+                position: relative;
+                z-index: 1;
+            }
+        }
+        nav{
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            left: 0;
+            top: 0;
+            background-color: fun.color('tertiary');
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            left: -100%;
+            transition: .5s ease left;
+            ul{
+                flex-direction: column;
+                text-align: center;
+                align-items: center;
+            }
+        }
+        &.enable{
+            nav{
+                left: 0;
+            }
+        }
+    }
 }
