feat: config routing

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,6 +7,7 @@ header{
     width: 100%;
     position: fixed;
     left: 0;
+    top: 0;
     background-color: fun.color('tertiary');
     padding: 10px;
     > div{
