feat: capture errors

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,7 +5,8 @@ $palette:(
     'primary': #9EFF00,
     'secondary': #00FFF0,
     'tertiary': #9747FF,
-    'cuartary': #680CFF
+    'cuartary': #680CFF,
+    'danger': rgb(231, 99, 99)
 );
 //BREAKPOINTS
 $breakpoints: (
