feat: ui list clients

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,7 +6,7 @@ $palette:(
     'secondary': #f39200,
     'tertiary': #0c2d57,
     'cuartary': #680CFF,
-    'danger': rgb(231, 99, 99),
+    'danger': #e76363,
     'bg': rgb(241, 241, 241)
 );
 //BREAKPOINTS
