--- a/src/scss/components/_error.scss
+++ b/src/scss/components/_error.scss
@@ -11,3 +11,9 @@
     width: fit-content;
     margin: 30px auto;
 }
+
+p.error--form{
+    color: fun.color('danger');
+    font-size: 1.3rem;
+    margin-top: 5px;
+}
