--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,3 +1,5 @@
+@use '../base/functions' as fun;
+
 .custom-form{
     margin: auto;
     display: grid;
@@ -7,5 +9,15 @@
     .block-actions,
     .w100{
         grid-column: 1/3;
+    }
+}
+
+@media (max-width: fun.breakpoints('ipad-big')){
+    .custom-form{
+        grid-template-columns: repeat(1, 1fr);
+        .w100,
+        .block-actions{
+            grid-column: 1/2;
+        }
     }
 }
