--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,6 +7,7 @@ $palette:(
     'tertiary': #0c2d57,
     'cuartary': #680CFF,
     'danger': #e76363,
+    'success': #49cc49,
     'bg': rgb(241, 241, 241)
 );
 //BREAKPOINTS
