--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -5,6 +5,7 @@ main{
     padding-top: var.$height-header;
     background-color: fun.color('bg');
     min-height: 100vh;
+    padding-bottom: 60px;
 }
 
 .container{
