feat: ui client edit

--- a/src/scss/templates/_clients.scss
+++ b/src/scss/templates/_clients.scss
@@ -34,7 +34,7 @@
         &:nth-child(odd){
             background-color: rgb(243, 243, 243);
         }
-        button{
+        a, button{
             outline: inherit;
             border: none;
             background-color: transparent;
