--- a/src/scss/templates/_clients.scss
+++ b/src/scss/templates/_clients.scss
@@ -15,7 +15,8 @@
         .item{
             flex: 1;
             &:last-child,
-            &:nth-child(4){
+            &:nth-child(4),
+            &:nth-child(5){
                 display: flex;
                 justify-content: center;
                 max-width: 100px;
