--- a/src/scss/components/_error.scss
+++ b/src/scss/components/_error.scss
@@ -10,6 +10,9 @@
     border-radius: 5px;
     width: fit-content;
     margin: 30px auto;
+    &.secondary{
+        background-color: fun.color('secondary');
+    }
 }
 
 p.error--form{
