feat: add transition for pages

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -8,7 +8,7 @@ header{
     position: fixed;
     left: 0;
     top: 0;
-    background-color: fun.color('tertiary');
+    background-color: fun.color('secondary');
     padding: 10px;
     z-index: 10;
     > div{
