--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,7 +3,7 @@ $palette:(
     'white': #fff,
     'black': #000,
     'primary': #0c2d57,
-    'secondary': #f39200,
+    'secondary': #a374ff,
     'tertiary': #0c2d57,
     'cuartary': #680CFF,
     'danger': #e76363,
