feat: optimize request when client list change

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -82,7 +82,7 @@ header{
             height: 100vh;
             left: 0;
             top: 0;
-            background-color: fun.color('tertiary');
+            background-color: fun.color('secondary');
             display: flex;
             justify-content: center;
             align-items: center;
