--- a/src/scss/templates/_clients.scss
+++ b/src/scss/templates/_clients.scss
@@ -86,7 +86,7 @@
                 justify-content: center;
                 align-items: center;
                 &:nth-child(4),
-                &:last-child{
+                &:nth-child(5){
                     max-width: 100%;
                 }
             }
