fix: error with transition pages

--- a/src/scss/layout/Transition.scss
+++ b/src/scss/layout/Transition.scss
@@ -9,6 +9,7 @@
     transition: .4s ease all;
     display: flex;
     justify-content: center;
+    top: -12vh;
     &.animate{
         bottom: 0;
         height: 117.5vh;
