--- a/src/scss/templates/_orders.scss
+++ b/src/scss/templates/_orders.scss
@@ -2,10 +2,11 @@
 
 .order-client{
     display: flex;
+    justify-content: center;
     gap: 15px;
-    margin: 15px 0 30px;
+    margin: 15px 0 0;
     background-color: rgb(228, 228, 228);
-    width: fit-content;
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     .item{
@@ -25,6 +26,55 @@
     }
 }
 
+.order-product{
+    display: flex;
+    article{
+        margin-top: 20px;
+        flex: 1;
+        h3{
+            text-align: center;
+        }
+        &:first-child{
+            border-right: 2px solid fun.color('secondary');
+            .item{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                border: 1px solid rgb(184, 184, 184);
+                background-color: rgb(228, 228, 228);
+                margin: 20px;
+                border-radius: 5px;
+                padding: 10px;
+            }
+            .block{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                img{
+                    width: 100px;
+                    max-height: 100px;
+                    border-radius: 5px;
+                }
+                .name{
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+}
+
+@media(max-width: fun.breakpoints('ipad-big')){
+    .order-product{
+        flex-direction: column;
+        article{
+            &:first-child{
+                border-right: none;
+                border-bottom: 2px solid fun.color('secondary');
+            }
+        }
+    }
+}
+
 @media(max-width: fun.breakpoints('ipad-small')){
     .order-client{
         flex-direction: column;
@@ -33,6 +83,36 @@
         width: 100%;
         .item{
             border-right: none;
+        }
+    }
+    .order-product{
+        article{
+            &:first-child{
+                .item{
+                    flex-direction: column;
+                    gap: 30px;
+                    margin: 0;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                    .block{
+                        flex-direction: column;
+                        img{
+                            width: 100%;
+                            max-width: 100%;
+                            max-height: 100%;
+                        }
+                        div{
+                            display: flex;
+                            justify-content: space-between;
+                            width: 100%;
+                        }
+                    }
+                    .btn{
+                        width: 100%;
+                        max-width: 100%;
+                    }
+                }
+            }
         }
     }
 }
