feat: calc total price and create a component for buttons amount

--- a/src/scss/templates/_orders.scss
+++ b/src/scss/templates/_orders.scss
@@ -106,6 +106,12 @@
     }
 }
 
+.order-make{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 @media(max-width: fun.breakpoints('ipad-big')){
     .order-product{
         flex-direction: column;
