feat: validate token, save token and auth user

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -37,6 +37,9 @@
     &--secondary{
         background-color: transparent;
     }
+    &--tertiary{
+        background-color: red;
+    }
     &--danger{
         background-color: fun.color('danger') !important;
         border-color: fun.color('danger');
