--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -37,6 +37,7 @@ header{
     nav{
         ul{
             display: flex;
+            align-items: center;
             list-style: none;            
             gap: 15px;
             a{
