--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,20 +1,20 @@
 @font-face {
     font-family: 'Roboto';
-    src: url("../../fonts/Roboto-Regular.ttf");
+    src: url("../fonts/Roboto-Regular.ttf"), url("../../fonts/Roboto-Regular.ttf");
     font-weight: 400;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url("../../fonts/Roboto-Medium.ttf");
+    src: url("../fonts/Roboto-Medium.ttf"), url("../../fonts/Roboto-Medium.ttf");
     font-weight: 500;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url("../../fonts/Roboto-Bold.ttf");
+    src: url("../fonts/Roboto-Bold.ttf"), url("../../fonts/Roboto-Bold.ttf");
     font-weight: 800;
     font-display: swap;
 }
